<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/eng"
        android:orderInCategory="100"
        android:title="@string/action_eng"
        app:showAsAction="never" />
    <item
        android:id="@+id/lug"
        android:orderInCategory="100"
        android:title="@string/action_lug"
        app:showAsAction="never" />

    <item
        android:id="@+id/swahiri"
        android:orderInCategory="100"
        android:title="@string/action_sw"
        app:showAsAction="never" />
    <item
        android:id="@+id/cloud"
        android:orderInCategory="100"
        android:title="@string/action_cloud"
        app:showAsAction="always" />
</menu>