<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_baseline_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_baseline_feedback"
            android:title="@string/menu_feedback" />

    </group>
    <item android:title="Terms and Conditions">
        <menu>
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_baseline_privacy"
                android:title="@string/menu_privacy" />
            <item
                android:id="@+id/nav_terms"
                android:icon="@drawable/ic_baseline_terms"
                android:title="@string/menu_terms" />
        </menu>

    </item>
</menu>