<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Types_Of_Child_Abuses">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:elevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textTittle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="5dp"
                        android:textColor="#000"
                        android:text="@string/t4"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/physical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginHorizontal="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/green"
                        android:textSize="25dp"
                        android:text="@string/qtn4"
                        app:layout_constraintTop_toBottomOf="@+id/textTittle2" />

                    <TextView
                        android:id="@+id/definition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/physicalAbuse"
                        android:fontFamily="sans-serif"
                        android:textColor="#000"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/physical"
                        android:layout_marginBottom="20dp"/>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:elevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textTittle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="5dp"
                        android:textColor="#000"
                        android:text="@string/t3"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/emotional"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginHorizontal="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/green"
                        android:textSize="25dp"
                        android:text="@string/qtn3"
                        app:layout_constraintTop_toBottomOf="@+id/textTittle" />

                    <TextView
                       android:id="@+id/tittle2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/emotionalAbuse"
                        android:fontFamily="sans-serif"
                        android:textColor="#000"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/emotional"
                        android:layout_marginBottom="20dp"/>
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/emotinalAbuse2"
                        android:fontFamily="sans-serif"
                        android:textColor="#000"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tittle2"
                        android:layout_marginBottom="20dp"/>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:elevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textTittle6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="5dp"
                        android:textColor="#000"
                        android:text="@string/t2"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/cultural"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginHorizontal="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/green"
                        android:textSize="25dp"
                        android:text="@string/qtn"
                        app:layout_constraintTop_toBottomOf="@+id/textTittle6" />

                    <TextView
                        android:id="@+id/tittle6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/neglectDefinition"
                        android:fontFamily="sans-serif"
                        android:textColor="#000"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/cultural"
                        android:layout_marginBottom="20dp"/>
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/childNeglect"
                        android:fontFamily="sans-serif"
                        android:textColor="#000"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tittle6"
                        android:layout_marginBottom="20dp"/>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:elevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textTittle3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="5dp"
                        android:textColor="#000"
                        android:text="@string/t1"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/neglect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginHorizontal="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/green"
                        android:textSize="25dp"
                        android:text="@string/qtn2"
                        app:layout_constraintTop_toBottomOf="@+id/textTittle3" />

                    <TextView
                        android:id="@+id/tittle5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/culturalAbuse"
                        android:fontFamily="sans-serif"
                        android:textColor="#000"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/neglect"
                        android:layout_marginBottom="20dp"/>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>