<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_below="@id/profileImage"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:text="Kayima George"/>
    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="Student at MUST Android Developer"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:text="@string/email"/>



    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="30dp"
        android:layout_below="@id/email">


        <TextView
            android:id="@+id/feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_feedback"
           android:layout_gravity="center"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="#000"/>


        <TextView
            android:id="@+id/privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_privacy"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="#000"/>


        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_terms"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="#000"/>

    </LinearLayout>

</RelativeLayout>